[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Solutions for Advent of Code 2022 in Python"
authors = ["Chris Stewart <cstewart90@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.0"
advent-of-code-data = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
